--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "gmail-interactions",
-    "slug": "gmail-interactions",
+    "name": "habit-tracker",
+    "slug": "habit-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "gmailinteractions",
+    "scheme": "habit-tracker",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
